# prmana

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile.build  LICENSE  NOTICE  README.md  SECURITY.md  deny.toml  docker-compose.spire-test.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: aws-platform-tests.yml  build-arm64-ami.yml  ci.yml  cleanup-runs.yml  fleet-test.yml  fuzz.yml  integration-arm64-aws.yml  integration-docker.yml  integration-multiarch.yml  kubectl-e2e.yml  mac-policy.yml  pages.yml  platform-tests.yml  provider-tests.yml  publish-repo.yml  release.yml  security.yml  test-installer.yml  validate-docs.yml  verify-idp-templates.yml
contrib/systemd/: prmana-agent.service  prmana-agent.socket  prmana-scim.service
demo/: package.json  record-demo.sh
deploy/: README.md
docs/: THREAT_MODEL.md  competitive-threat-surface.md  demo-output.html  demo-videos.html  entra-e2e-setup.html  hardware-key-setup.md  installation.md  observability.md  oidc-oauth-deep-dive.md  pam-integration.md  pdf-style.tex  rollout-checklist.md  security-guide.md  security-roadmap.md  standards-compliance-matrix.md  threat-model.md
dpop-cross-language-tests/: run-cross-language-tests.sh
examples/: policy.yaml
go-oauth-dpop/: README.md  go.mod
java-oauth-dpop/: build.gradle.kts
pam-prmana/: Cargo.toml
prmana-agent/: Cargo.toml
prmana-core/: Cargo.toml
prmana-core/src/oidc/: mod.rs
python-oauth-dpop/: pyproject.toml
rust-oauth-dpop/: Cargo.toml
website/: CNAME  index.html
(+90 files in other folders)
