# Cargo.toml
[workspace]
members = [
    "prmana-core",
    "pam-prmana",
    "prmana-agent",
]
exclude = ["fuzz", "test/fixtures/attestation/gen"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/prodnull/prmana"
homepage = "https://github.com/prodnull/prmana"
documentation = "https://github.com/prodnull/prmana/tree/main/docs"
keywords = ["oidc", "pam", "ssh", "authentication", "dpop"]
categories = ["authentication", "command-line-utilities"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
thiserror = "1.0"
anyhow = "1.0"
