[package]
name = "prmana-core"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Shared OIDC discovery and JWKS primitives for prmana"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
jsonwebtoken = { version = "10.3", features = ["aws_lc_rs"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
parking_lot = "0.12"
